fix: modal version mobile

--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -2,6 +2,7 @@
 @import '../../styles/vars';
 
 .wrapper {
+    @include flexColCenter;
     background-color: rgb(0, 0, 0, 50%);
     bottom: 0;
     height: 100%;
@@ -14,6 +15,7 @@
     background-color: white;
     bottom: 0;
     height: 375px;
+    padding: 10px;
     position: fixed;
     width: 100%;
     z-index: 100;
@@ -89,4 +91,12 @@
     height: 18px;
     margin-left: 5px;
     width: 18px;
+}
+
+@include desktop {
+    .modal {
+        border-radius: $borderRounded;
+        bottom: 20%;
+        width: 70%;
+    }
 }
